update work hours part 1

--- a/client/src/app/components/modal/modal.component.html
+++ b/client/src/app/components/modal/modal.component.html
@@ -45,14 +45,14 @@
     </p>
     <p class="text-truncate text-center h4 text-dark">
       <strong>{{fb_Value_Index[1]}}</strong>
-      {{fb_Value_Index[2]}}
+      <!-- {{fb_Value_Index[2]}} -->
     </p>
   </div>
   <!-- Footer -->
   <div class="modal-footer d-flex justify-content-between">
     <button type="button" class="btn btn-outline-secondary" (click)="close()">取消</button>
     <!-- <button type="button" class="btn btn-outline-secondary" (click)="modal.dismiss('Cross click')">取消</button> -->
-    <button type="submit" class="btn btn-outline-danger" (click)="delete()" [disabled]="!fbGroup.valid">確定</button>
+    <button type="submit" class="btn btn-outline-danger" (click)="delete()" [disabled]="!fb_Value_Index[0]">確定</button>
   </div>
   <!-- /Footer -->
 </ng-template>
